mule-user-guide/v/4.0/dw-core-functions-plusplus.adoc
= &#43;&#43;

//* <<plusplus1>>
//* <<plusplus2>>
//* <<plusplus3>>
//* <<plusplus4>>
//* <<plusplus5>>
//* <<plusplus6>>
//* <<plusplus7>>
//* <<plusplus8>>
//* <<plusplus9>>
//* <<plusplus10>>
//* <<plusplus11>>
//* <<plusplus12>>
//* <<plusplus13>>


[[plusplus1]]
===== ++(Array<S>, Array<T>): Array<S | T>


It returns the resulting array of concatenating two existing arrays.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: [0, 1, 2] ++ [3, 4, 5]
}
----

.Output
[source,json,linenums]
----
{
  "a": [0, 1, 2, 3, 4, 5]
}
----

Note that the arrays can contain any supported data type, for example:

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: [0, 1, true, "my string"] ++ [2, [3,4,5], {"a": 6}]
}
----

.Output
[source,json,linenums]
----
{
  "a": [0, 1, true, "my string", 2, [3, 4, 5], { "a": 6}]
}
----



[[plusplus2]]
===== ++(String, String): String


Strings are treated as arrays of characters, so the operation works just the same with strings.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  name: "Mule" ++ "Soft"
}
----

.Output
[source,json,linenums]
----
{
  "name": MuleSoft
}
----



[[plusplus3]]
===== ++(Object, Object): Object

Returns the resulting object of concatenating two existing objects.

.Transform
[source,DataWeave,linenums]
----
%dw 2.0
output application/xml
---
concat: {aa: "a"} ++ {cc: "c"}
----

.Output
[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<concat>
  <aa>a</aa>
  <cc>c</cc>
</concat>
----

The example above concatenates object {aa: a} and {cc: c} in a single one -> {aa: a , cc: c}



[[plusplus4]]
===== ++(Date, LocalTime): LocalDateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |2003-10-01| ++ |23:57:59|,
  b: |2003-10-01| ++ |23:57:59Z|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically a 'Date' + 'Time'  will result in the same as a '#Time' + 'Date'.



[[plusplus5]]
===== ++(LocalTime, Date): LocalDateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |23:57:59| ++ |2003-10-01|,
  b: |23:57:59Z| ++ |2003-10-01|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically a 'Date' + 'Time'  will result in the same as a '#Time' + 'Date'.



[[plusplus6]]
===== ++(Date, Time): DateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |2003-10-01| ++ |23:57:59|,
  b: |2003-10-01| ++ |23:57:59Z|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically a 'Date' + 'Time'  will result in the same as a '#Time' + 'Date'.



[[plusplus7]]
===== ++(Time, Date): DateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |23:57:59| ++ |2003-10-01|,
  b: |23:57:59Z| ++ |2003-10-01|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically a 'Date' + 'Time'  will result in the same as a '#Time' + 'Date'.



[[plusplus8]]
===== ++(Date, TimeZone): DateTime

Appends a time zone to a date type value.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |2003-10-01T23:57:59| ++ |-03:00|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus9]]
===== ++(TimeZone, Date): DateTime

Appends a time zone to a date type value.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |-03:00| ++ |2003-10-01T23:57:59|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus10]]
===== ++(LocalDateTime, TimeZone): DateTime

Appends a time zone to a date type value.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |2003-10-01T23:57:59| ++ |-03:00|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus11]]
===== ++(TimeZone, LocalDateTime): DateTime

Appends a time zone to a date type value.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |-03:00| ++ |2003-10-01T23:57:59|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus12]]
===== ++(LocalTime, TimeZone): Time

Appends a time zone to a date type value.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |2003-10-01T23:57:59| ++ |-03:00|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus13]]
===== ++(TimeZone, LocalTime): Time

Appends a time zone to a date type value.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |-03:00| ++ |2003-10-01T23:57:59|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----


