mule-user-guide/v/4.1/dw-core-functions-plusplus.adoc
= &#43;&#43;

//* <<plusplus1>>
//* <<plusplus2>>
//* <<plusplus3>>
//* <<plusplus4>>
//* <<plusplus5>>
//* <<plusplus6>>
//* <<plusplus7>>
//* <<plusplus8>>
//* <<plusplus9>>
//* <<plusplus10>>
//* <<plusplus11>>
//* <<plusplus12>>
//* <<plusplus13>>


[[plusplus1]]
===== ++(Array<S>, Array<T>): Array<S | T>


Concatenates the elements of two arrays into a new array. 

If the two arrays contain different types of elements, the resulting array 
is all of `S` type elements of `Array<S>` followed by all the `T` type elements 
of `Array<T>`. Either of the arrays can also have mixed-type elements. 

Here is an example of concatenating an `Array<Number>` with an `Array<String>`:

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  result: [0, 1, 2] ++ ["a", "b", "c"]
}
----

.Output
[source,json,linenums]
----
{
  "result": [0, 1, 2, "a", "b", "c"]
}
----

Note that the arrays can contain any supported data type, for example:

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: [0, 1, true, "my string"] ++ [2, [3,4,5], {"a": 6}]
}
----

.Output
[source,json,linenums]
----
{
  "a": [0, 1, true, "my string", 2, [3, 4, 5], { "a": 6}]
}
----



[[plusplus2]]
===== ++(String, String): String


Strings are treated as arrays of characters, so the `++` operator concatenates 
the characters of each String as if they were arrays of single character Strings. 

For example, the String "Mule" is treated like the `Array<String> ["M", "u", "l", "e"]`. 

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  name: "Mule" ++ "Soft"
}
----

.Output
[source,json,linenums]
----
{
  "name": MuleSoft
}
----



[[plusplus3]]
===== ++(Object, Object): Object

Concatenates two input objects together and returns one flattened object.

The `++` operator extracts all the key-values pairs from each object, 
then combines them together into one result object. 

.Transform
[source,DataWeave,linenums]
----
%dw 2.0
output application/xml
---
concat: {aa: "a", bb: "b"} ++ {cc: "c"}
----

.Output
[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<concat>
  <aa>a</aa>
  <bb>b</bb>
  <cc>c</cc>
</concat>
----

If you leave the output as `application/dw`, the example above concatenates 
each key-value pair from the two objects `{aa: "a", bb: "b"} ++ {cc: "c"}` and 
returns a single object `{aa: "a" , bb: "b", cc: "c"}`.



[[plusplus4]]
===== ++(Date, LocalTime): LocalDateTime

You can append a `Time` (or `LocalTime`) with a `Date` object 
to return a more precise `Datetime` value.

`Date` and `Time` instances are written in standard Java notation, surrounded by 
pipe (`|`) symbols. The result is a `DateTime` object in the standard Java format. 

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |2003-10-01| ++ |23:57:59|,
  b: |2003-10-01| ++ |23:57:59Z|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically,
a 'Date' + 'Time' will produce the same result as a 'Time' + 'Date'.



[[plusplus5]]
===== ++(LocalTime, Date): LocalDateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |23:57:59| ++ |2003-10-01|,
  b: |23:57:59Z| ++ |2003-10-01|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically,
a 'Date' + 'Time' will produce the same result as a 'Time' + 'Date'.



[[plusplus6]]
===== ++(Date, Time): DateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |2003-10-01| ++ |23:57:59|,
  b: |2003-10-01| ++ |23:57:59Z|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically a 'Date' + 'Time'  will result in the same as a '#Time' + 'Date'.



[[plusplus7]]
===== ++(Time, Date): DateTime

You can append a date to a time (or localtime) object so as to provide a more precise value.


.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
{
  a: |23:57:59| ++ |2003-10-01|,
  b: |23:57:59Z| ++ |2003-10-01|
}

----

.Output
[source,json,linenums]
----
{
    "a": "2003-10-01T23:57:59",
    "b": "2003-10-01T23:57:59Z"
}
----


Note that the order in which the two objects are appended is irrelevant, so logically a 'Date' + 'Time'  will result in the same as a '#Time' + 'Date'.



[[plusplus8]]
===== ++(Date, TimeZone): DateTime

Appends a `TimeZone` to a `Date` type value and returns a `DateTime` result.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |2003-10-01T23:57:59| ++ |-03:00|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus9]]
===== ++(TimeZone, Date): DateTime

Appends a `Date` to a `TimeZone` type value and returns a `DateTime` result.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |-03:00| ++ |2003-10-01T23:57:59|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus10]]
===== ++(LocalDateTime, TimeZone): DateTime

Appends a `TimeZone` to a `LocalDateTime` type value and returns a `DateTime` result.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |2003-10-01T23:57:59| ++ |-03:00|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus11]]
===== ++(TimeZone, LocalDateTime): DateTime

Appends a `LocalDateTime` to a `TimeZone` type value and returns a `DateTime` result.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |-03:00| ++ |2003-10-01T23:57:59|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus12]]
===== ++(LocalTime, TimeZone): Time

Appends a `TimeZone` to a `LocalTime` type value and returns a `Time` result.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |2003-10-01T23:57:59| ++ |-03:00|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----



[[plusplus13]]
===== ++(TimeZone, LocalTime): Time

Appends a `LocalTime` to a `TimeZone` type value and returns a `Time` result.

.Transform
[source,DataWeave, linenums]
----
%dw 2.0
output application/json
---
a: |-03:00| ++ |2003-10-01T23:57:59|
----

.Output
[source,json,linenums]
----
{
  "a": "2003-10-01T23:57:59-03:00"
}
----


